# hrpc-rs

./: .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  index.html  rust-toolchain.toml  search-index.js  settings.html  shell.nix  source-files.js
chat/: all.html  (+2 more)
crates/hrpc/: Cargo.toml  README.md  build.rs
crates/hrpc-build/: Cargo.toml  README.md
crates/hrpc-build/src/: TONIC_LICENSE  client.rs  lib.rs  prost.rs  server.rs
crates/hrpc-proc-macro/: Cargo.toml
crates/hrpc-proc-macro/src/: lib.rs
crates/hrpc/src/: body.rs  client.rs  decode.rs  encode.rs  lib.rs  proto.rs  request.rs  response.rs  server.rs
examples/chat/: Cargo.toml  README.md  build.rs
examples/chat/client/: Cargo.toml
examples/chat/common/: Cargo.toml
examples/chat/server/: Cargo.toml
examples/chat/wasm_client/: Cargo.toml  index.html
examples/hello_world/: Cargo.toml  build.rs
examples/hello_world/src/: hello.proto  lib.rs
examples/interop/: Cargo.toml
examples/interop/src/: main.rs
examples/mock/: Cargo.toml  README.md
examples/mock/src/: hello.proto  lib.rs  main.rs
hrpc/: Cargo.toml  all.html  attr.async_trait.html  constant.HRPC_CONTENT_MIMETYPE.html  constant.HRPC_HEADER.html  constant.HRPC_SPEC_VERSION.html  constant.HRPC_WEBSOCKET_PROTOCOL.html  enum.ClientError.html  enum.DecodeBodyError.html  enum.InvalidUrlKind.html  enum.SocketMessage.html  fn.box_error.html  fn.encode_protobuf_message.html  fn.encode_protobuf_message_to.html  index.html  macro.bail.html  macro.bail_result!.html  macro.bail_result.html  macro.bail_result_as_response!.html  macro.bail_result_as_response.html  macro.balanced_or_tree.html  macro.combine_services!.html  macro.combine_services.html  macro.debug_boxed!.html  macro.debug_boxed.html  macro.handler!.html  macro.handler.html  macro.include_proto.html  macro.make_handler!.html  macro.make_handler.html  macro.return_closed!.html  macro.return_closed.html  macro.return_err_as_resp!.html  macro.return_err_as_resp.html  macro.return_error.html  macro.return_print!.html  macro.return_print.html  macro.serve_multiple!.html  macro.serve_multiple.html  macro.serve_multiple_tls!.html  (+14 more)
hrpc-build/: Cargo.toml
hrpc-build/src/: client.rs  lib.rs  prost.rs  server.rs
hrpc/body/: fn.box_body.html  fn.empty_box_body.html  fn.full_box_body.html  index.html  sidebar-items.js  struct.Body.html  type.BodyResult.html  type.BoxBody.html  type.HyperBody.html
hrpc/client/: enum.ClientError.html  enum.InvalidUrlKind.html  fn.http_client.html  index.html  sidebar-items.js  struct.Client.html  struct.ReadSocket.html  struct.Request.html  struct.Socket.html  struct.WriteSocket.html  trait.IntoRequest.html  type.BoxedTransport.html  type.ClientResult.html  type.HttpClient.html
hrpc/client/boxed/: index.html  sidebar-items.js  struct.BoxedTransport.html  struct.BoxedTransportError.html
hrpc/client/error/: enum.ClientError.html  enum.InvalidUrlKind.html  enum.SocketError.html  index.html  sidebar-items.js  struct.HttpError.html  struct.HyperError.html  struct.IoError.html  type.ClientResult.html
hrpc/client/layer/: index.html  sidebar-items.js  struct.Modify.html  struct.ModifyFuture.html  struct.ModifyLayer.html  type.ModifyReq.html  type.ModifyResp.html
hrpc/client/prelude/: index.html  macro.Debug.html  sidebar-items.js  struct.Socket.html  struct.Uri.html  trait.Debug.html  trait.TryInto.html
hrpc/client/socket/: index.html  sidebar-items.js  struct.ReadSocket.html  struct.Socket.html  struct.WriteSocket.html
hrpc/client/transport/: enum.TransportError.html  enum.TransportRequest.html  enum.TransportResponse.html  fn.box_socket_stream_sink.html  fn.is_socket_request.html  index.html  sidebar-items.js  struct.SocketChannels.html  trait.Transport.html  type.CallResult.html
hrpc/common/: index.html  sidebar-items.js
hrpc/common/extensions/: index.html  sidebar-items.js  struct.Extensions.html
hrpc/common/fut/: fn.ready.html  index.html  struct.Ready.html
hrpc/decode/: enum.DecodeBodyError.html  index.html  sidebar-items.js
hrpc/encode/: fn.encode_protobuf_message.html  fn.encode_protobuf_message_to.html  index.html  sidebar-items.js
hrpc/error/: enum.ClientError.html  enum.InvalidUrlKind.html  type.ClientResult.html
hrpc/exports/: attr.async_trait.html  index.html
hrpc/proto/: enum.HrpcErrorIdentifier.html  index.html  sidebar-items.js  struct.Error.html  struct.NotHrpcErrorIdentifier.html  struct.RetryInfo.html
hrpc/request/: index.html  sidebar-items.js  struct.Parts.html  struct.Request.html  trait.IntoRequest.html  type.BoxRequest.html
hrpc/response/: index.html  sidebar-items.js  struct.Parts.html  struct.Response.html  trait.IntoResponse.html  type.BoxResponse.html
hrpc/server/: enum.SocketError.html  fn.box_body.html  fn.handler_service.html  fn.json_err_bytes.html  fn.serve.html  fn.ws_handler_service.html  index.html  sidebar-items.js  struct.Body.html  struct.HrpcMakeService.html  struct.IntoMakeService.html  struct.LayeredServer.html  struct.LayeredService.html  struct.ReadSocket.html  struct.ReadSocketArc.html  struct.ServerStack.html  struct.ServiceStack.html  struct.Socket.html  struct.SocketArc.html  struct.StatusCode.html  struct.WriteSocket.html  struct.WriteSocketArc.html  trait.CustomError.html  trait.HeaderMapExt.html  trait.MakeHrpcService.html  trait.MakeRoutes.html  trait.Server.html  trait.Service.html  type.BoxBody.html  type.BoxedMakeHrpcService.html  type.HrpcLayer.html  type.HrpcRoute.html  type.HrpcRouteLayer.html  type.HrpcService.html
hrpc/src/: body.rs  client.rs  lib.rs  server.rs
interop/: Cargo.toml  all.html  build.rs  enum.ServerError.html  fn.client.html  fn.main.html  fn.mu.html  fn.mu_mu.html  fn.mu_mute.html  fn.server.html  index.html  sidebar-items.js  struct.MuService.html  struct.Ping.html  struct.Pong.html  struct.Server.html
interop/mu_client/: index.html  sidebar-items.js  struct.MuClient.html
interop/mu_server/: index.html  sidebar-items.js  struct.MuServer.html  trait.Mu.html
interop/proto/: test.proto
interop/src/: main.rs
(+538 files in other folders)
