[package]
name = "hrpc-build"
version = "0.5.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/harmony-development/hrpc-rs"
homepage = "https://github.com/harmony-development/hrpc-rs"
description = "Code generation for hRPC."
keywords = ["hrpc", "harmony", "rpc", "build"]

[dependencies]
prost = "0.7"
prost-build = "0.7"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["rustfmt", "client", "server"]
rustfmt = []
server = []
client = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.nix]
build = true
library = true