[package]
name = "hrpc"
version = "0.11.8"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/harmony-development/hrpc-rs"
homepage = "https://github.com/harmony-development/hrpc-rs"
description = "Common code for hRPC."
keywords = ["hrpc", "harmony", "rpc"]

[features]
default = ["server", "client"]
server = ["warp", "tokio", "ahash", "dashmap", "tokio/macros"]
client = [
    "reqwest",
    "rustls-native-certs",
    "tokio-tungstenite",
    "tokio",
    "tokio-rustls",
]

[dependencies]
async-trait = "0.1"
prost = "0.8"
bytes = "1.0"
url = "2.2"
futures-util = "0.3"
tracing = "0.1"
http = "0.2"

dashmap = { version = "4.0", optional = true }
ahash = { version = "0.7", optional = true, default-features = false }
warp = { version = "0.3", features = ["tls", "compression"], optional = true }

rustls-native-certs = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"], optional = true }
tokio = { version = "1.8", features = ["parking_lot"], optional = true }
tokio-rustls = { version = "0.22", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "gzip"], optional = true }
parking_lot = "0.11"
flume = "0.10"

[package.metadata.nix]
build = true
library = true
