[package]
name = "interop"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[dependencies]
prost = "0.7"
hrpc = { path = "../hrpc" }
tokio = { version = "1.1", features = [ "rt", "macros", "fs" ] }

[build-dependencies]
hrpc-build = { path = "../hrpc-build" }