[package]
name = "interop"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.7"
hrpc = { path = "../hrpc" }
tokio = { version = "1.2", features = [ "rt", "macros", "fs" ] }
warp = "0.3"
futures = "0.3"
simplelog = "0.9"

[build-dependencies]
hrpc-build = { path = "../hrpc-build" }
