[package]
name = "interop"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.8"
hrpc = { path = "../hrpc" }
tokio = { version = "1.8", features = ["rt", "macros", "fs"] }
futures = "0.3"
tracing-subscriber = "0.2"

[build-dependencies]
hrpc-build = { path = "../hrpc-build" }

[package.metadata.nix]
build = true
app = true
