[package]
name = "hrpc-build"
version = "0.27.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/harmony-development/hrpc-rs"
homepage = "https://github.com/harmony-development/hrpc-rs"
description = "Code generation for hRPC."
keywords = ["hrpc", "harmony", "rpc", "build", "protobuf"]
categories = ["development-tools::build-utils"]

[dependencies]
prost-build = "0.9"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["rustfmt"]
rustfmt = []

server = []
client = []
recommended = ["default_transport_http"]

default_transport_http = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.nix]
build = true
library = true