[package]
name = "hrpc"
version = "0.29.5"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/harmony-development/hrpc-rs"
homepage = "https://github.com/harmony-development/hrpc-rs"
description = "Common code for hRPC."
keywords = ["hrpc", "harmony", "rpc", "protobuf"]
categories = ["network-programming"]
include = [
    "/src",
    "/build.rs",
    "/Cargo.toml",
    "/hrpc-main/protocol",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true

[package.metadata.nix]
build = true
library = true

[features]
default = []

# Enable common server code
server = ["_common", "tower", "matchit", "hrpc-proc-macro"]
# Enable common client code
client = ["_common"]
# Internal feature used to indicate common server / client is enabled
_common = ["futures-util/sink"]

# Enables the HTTP server
http_server = [
    "server",
    "_common_http",
    "websocket_tokio_tungstenite",
    "tokio/rt",
    "hyper",
    "axum-server",
    "sha-1",
    "base64",
]
# Enables the default `hyper` HTTP client
http_hyper_client = [
    "client",
    "_common_http",
    "websocket_tokio_tungstenite",
    "_common_http_client",
    "hyper",
    "hyper-rustls",
    "hyper/client",
]
# Internal feature used to indicate that a HTTP client is enabled
_common_http_client = []
# Internal feature used to indicate that HTTP is enabled
_common_http = ["http", "http-body"]

# Enable the tokio_tungstenite websocket implementation
websocket_tokio_tungstenite = ["tokio-tungstenite", "tokio"]

[build-dependencies]
# Needed to compile the hRPC proto
hrpc-build = { version = "0.29.0", path = "../hrpc-build", default-features = false }
prost-build = "0.9"

[dependencies]
# Core types, traits and utilities
prost = "0.9"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Re-exported by server
hrpc-proc-macro = { version = "0.29.0", path = "../hrpc-proc-macro", optional = true }
# Used by server for it's incredible Service trait and other utilities
tower = { version = "0.4", default-features = false, features = [
    "util",
], optional = true }

# Logging
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Used by http server impl in ws handling
tokio = { version = "1", default-features = false, optional = true }

# Http transport deps
http = { version = "0.2", optional = true }
http-body = { version = "0.4", optional = true }
hyper = { version = "0.14", default-features = false, features = [
    "http1",
    "http2",
    "runtime",
    "stream",
], optional = true }
hyper-rustls = { version = "0.22", default-features = false, features = [
    "native-tokio",
], optional = true }
tokio-tungstenite = { version = "0.16", default-features = false, features = [
    "rustls-tls-native-roots",
    "connect",
], optional = true }
axum-server = { version = "0.3", default-features = false, features = [
    "tls-rustls",
], optional = true }

# Used by server for routing
matchit = { version = "0.4", default-features = false, optional = true }

# Used by server to implement WS request handling
sha-1 = { version = "0.9", default-features = false, optional = true }
base64 = { version = "0.13", default-features = false, optional = true }