[package]
name = "chat"
description = "Simple chat example for hrpc-rs."
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.9"
# Enable hrpc's server and client features, and the recommended transport
hrpc = { path = "../../crates/hrpc", features = [
    "server",
    "client",
    "recommended",
] }
# Enable tokio's macros so we can mark our main function, and multi threaded
# runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# We will use rustyline to read messages from user on our client
rustyline = "9"
# We will use tower's RateLimitLayer to rate limit our endpoints
tower = { version = "0.4", features = ["limit"] }
# tower-http for CORS layer
tower-http = { version = "0.1", features = ["cors"] }

[build-dependencies]
# Enable the features corresponding to what we enabled for hrpc
hrpc-build = { path = "../../crates/hrpc-build", features = [
    "server",
    "client",
    "recommended",
] }

[[bin]]
name = "client"
doc = false

[[bin]]
name = "server"
doc = false
