[package]
name = "hello_world"
description = "Simple 'hello world' example for hrpc-rs."
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.10"
hrpc = { path = "../../crates/hrpc", features = [
    "http_hyper_client",
    "http_server",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
hrpc-build = { path = "../../crates/hrpc-build", features = [
    "server",
    "client",
    "default_transport_http",
] }

[[bin]]
name = "client"
doc = false

[[bin]]
name = "server"
doc = false
