[package]
name = "interop"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.9"
hrpc = { path = "../../crates/hrpc" }
tokio = { version = "1.8", features = ["rt", "macros", "fs"] }
futures = "0.3"
tracing-subscriber = "0.2"
tower = { version = "0.4", features = ["limit", "load"] }

[build-dependencies]
hrpc-build = { path = "../../crates/hrpc-build" }

[package.metadata.nix]
build = true
app = true
