[package]
name = "chat_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
hrpc = { path = "../../../crates/hrpc", features = ["client", "server"] }

[build-dependencies]
hrpc-build = { path = "../../../crates/hrpc-build", features = ["client", "server"] }