[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat_common = { path = "../common" }
# Enable hrpc's server and client features, and the recommended transport
hrpc = { path = "../../../crates/hrpc", features = ["http_server"] }
# Enable tokio's macros so we can mark our main function, and multi threaded
# runtime
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }

# Server dependencies
# We will use tower's RateLimitLayer to rate limit our endpoints
tower = { version = "0.4", features = ["limit"] }
# tower-http for CORS layer and tracing
tower-http = { version = "0.2", features = ["cors"] }
# Logging utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }